--- a/index.html
+++ b/index.html
@@ -21,8 +21,9 @@
                 </a>
             </div>
         </div>
-        <div class="content">
-        </div>
+        <!-- <div class="content">
+        </div> -->
+        <div class="junq"></div>
     </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
