added junq watermark
lil mascot dude

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         <!-- <div class="content">
         </div> -->
         <div class="junq"></div>
+        <div class="junq-lash"></div>
     </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
